--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,15 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="gfellloo">gfellloo</string>
-    <string name="title_history" >History</string>
-    <string name="title_addexpense" >Add Expense</string>
+    <string name="title_history">History</string>
+    <string name="title_addexpense">Add Expense</string>
+    <string name="title_activity_add_modify_expenses">AddModifyExpenses</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
