--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,15 @@
 <resources>
     <string name="app_name">CashbackApp</string>
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
-    <string name="gfellloo">gfellloo</string>
     <string name="title_history">History</string>
     <string name="title_addexpense">Add Expense</string>
     <string name="title_activity_add_modify_expenses">AddModifyExpenses</string>
+    <string-array name="type">
+        <item>Petrol</item>
+        <item>Groceries</item>
+        <item>E-wallet</item>
+        <item>Others</item>
+    </string-array>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
